# technova_rag_assistant

./: .env.example  .gitignore  README.md  REPORT.md  app.py  config.py  modal_app.py  prompts.py  pyproject.toml  requirements.txt
evaluation/: eval_results.json  evaluate.py  evaluator.py  questions.json
notebooks/: solution.ipynb
rag/: chain.py  embeddings.py  loader.py  retriever.py
